@@ -9,7 +9,7 @@ LD Heatmap
 Visualization of pairwise Linkage Disequilibrium (LD) estimates generated by function \code{pairwiseLD} in a LD heatmap for each chromosome using the \code{LDheatmap} package (Shin et al, 2006) .
 }
 \usage{
-LDMap(LDmat,gpData,chr=NULL,file=NULL,fileFormat="pdf",...)
+LDMap(LDmat,gpData,chr=NULL,file=NULL,fileFormat="pdf",oneFile=TRUE,...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -28,6 +28,9 @@ Optionally a path to a file where the plot is saved to
   \item{fileFormat}{
 \code{character}. At the moment two file formats are supported: pdf and png. Default is \code{"pdf"}.
 }
+  \item{oneFile}{
+\code{logical}. If \code{fileFormat = "pdf"} you can decide, if you like to have all graphics 
+in one file or in multiple files. } 
   \item{\dots}{
 Further arguments that could be passed to function \code{LDheatmap}
 }
@@ -43,6 +46,9 @@ Shin JH, Blay S, McNeney B, Graham J (2006). LDheatmap: An R Function for Graphi
 Display of Pairwise Linkage Disequilibria Between Single Nucleotide Polymorphisms. 
 Journal of Statistical Software, 16, Code Snippet 3. URL http://stat-db.stat.sfu.ca:
 8080/statgen/research/LDheatmap/.
+}
+\author{
+ Hans-Juergen Auinger, Theresa Albrecht and Valentin Wimmer
 }
 \seealso{
 \code{\link{pairwiseLD}}, \code{\link[LDheatmap]{LDheatmap}}, \code{\link{LDDist}}
